tests/negative/gold/uninitialized_local2_test.gold
tests/negative/uninitialized_local2_test.toit:53:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/uninitialized_local2_test.toit:16:9: error: Can't assign to final local
  local = 42
        ^
tests/negative/uninitialized_local2_test.toit:21:10: error: Can't assign to final local multiple times
  local2 = 42
         ^
tests/negative/uninitialized_local2_test.toit:29:7: error: Local 'local3' must be initialized before first use
  use local3
      ^~~~~~
tests/negative/uninitialized_local2_test.toit:33:12: error: Can't assign to final local multiple times
    local4 = 42
           ^
tests/negative/uninitialized_local2_test.toit:37:29: error: Can't assign to final local multiple times
  for i := 0; i < 0; local5 = 0:
                            ^
tests/negative/uninitialized_local2_test.toit:41:12: error: Can't assign to final local multiple times
    local6 = 42
           ^
tests/negative/uninitialized_local2_test.toit:42:7: error: Local 'local6' must be initialized before first use
  use local6
      ^~~~~~
tests/negative/uninitialized_local2_test.toit:46:12: error: Can't assign to final local multiple times
    local7 = 42
           ^
tests/negative/uninitialized_local2_test.toit:47:7: error: Local 'local7' must be initialized before first use
  use local7
      ^~~~~~
tests/negative/uninitialized_local2_test.toit:50:29: error: Can't assign to final local multiple times
  for i := 0; i < 2; local8 = 42:
                            ^
Compilation failed.
